--- a/index.html
+++ b/index.html
@@ -3,8 +3,62 @@
 <head>
   <meta charset="UTF-8">
   <title>NEXT Event</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+  <div class="event">
+
+    <h1 class="event__title">Next event</h1>
+
+    <div class="wrapper">    
+    <div class="event__counter">
+
+      <div class="event__col">
+        <div class="event__digit">39</div>
+        <div class="event__counter-descr">days</div>
+      </div>
+
+      <div class="event__col">
+        <div class="event__digit">18</div>
+        <div class="event__counter-descr">hours</div>
+      </div>
+
+      <div class="event__col">
+        <div class="event__digit">13</div>
+        <div class="event__counter-descr">minutes</div>
+      </div>
+
+      </div>
+
+    <div class="event__place">
+
+      <div class="event__map">
+       <svg xmlns="http://www.w3.org/2000/svg" width="197" height="159" viewBox="0 0 197 159">
+        <defs>
+          <style>
+            .cls-1 {
+              fill: #fff;
+              fill-opacity: 0;
+              stroke: #fff;
+              stroke-linejoin: round;
+              stroke-width: 1px;
+              fill-rule: evenodd;
+            }
+          </style>
+          </defs>
+          <path id="Forma_1" data-name="Forma 1" class="cls-1" d="M1202.71,496.7c-1.16-11.954-6.22-19.977-19.3-8.852-1.58,1.31-5.15.521-7.78,0.325-16.11-1.231-28.2-10.456-39.2-21.025-8.8-8.466-17.07-13.768-28.21-3.922a31.267,31.267,0,0,1-10.08,5.842c-4.39,1.568-3.64,4.162-4.78,7.8-2.72,8.506-9.19,16.033-15.24,23-0.67.763-10.15,1.029-14.24-3.593-1.31-1.46-3.11-4.469-5.16-2.432-9.51,9.372-21.4,4.443-32.81,5.78,1.16,9.846,2.67,19.976,11.4,25.362,7.17,4.443,6.21-9.557,13.72-8.461,1.18,5.714-.31,12.3,5.98,16.971,0.32-5.154.63-9.658,0.88-13.8,12.26-2.1,6.43,7.006,7.52,11.314,2.13,8.413,12.52,11.445,12.9,20.77-2.83.587-5.66,1.2-8.31,1.753,2.72,8.974,9.63,9.009,16.81,8.518,12.4,3.541,18.09,21.472,34.61,16.161,2.23,2.069-.67,3.233-0.89,4.89l0.49,0.535-0.51-.482c-0.59.42-1.17,0.885-1.73,1.323,0.72,0.657,1.42,1.3,2.14,1.972h-0.02c-1.68,2.91-2.19,4.855,2.1,6.4,7.41,2.647,14.65,1.508,22.01.579,1.6,1.367,4.85.28,5.26,3.5h-23.03c-0.32,1.736-.61,3.5-0.92,5.276,17.64-4.39,31.19,8.325,49.38,7.887-6.48-5.153-11.82-9.447-17.16-13.7-5.23-5.566-8.59-14.329-14.1-17.554-20.62-12.112-29.47-33.811-44.39-50.419-3.85-4.241-1.68-11.02.76-14.841,2.94-4.614,6.62,0,9.2,2.739,3.66,3.882,6.88,3.1,9.57-.881,2.3-3.475,5.82-2.774,9.09-3.777,11.15-3.432,21.01,3.058,31.73,3.47,9.64,0.368,20.23-3.733,29.11,2.081,7.7,5.035,14.71,14.531,17.98-3.356,0.39-2.117,6.04.219,8.6-3.409C1211.82,505.939,1203.59,505.767,1202.71,496.7Z"
+          transform="translate(-1022.5 -454.5)"/>
+      </svg>
+      </div>
+
+      <div class="event__description">        
+        <p class="event__text">July 14, 15, 16 2017 Poljud Stadium Split, Croatia - Europe</p>
+      </div>
+
+    </div>
+
+    </div>
+  </div>  
+  <script src="js/main.js"></script>
 </body>
 </html>
