--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     </div>
 
     </div>
+    <a href="#" class="event__link">Reserve Ticket</a>
   </div>  
   <script src="js/main.js"></script>
 </body>
